# saper_git

./: .cproject  .project  CMakeLists.txt  README  Saper.cpp  config.conf  configmaker
Saper/: .cproject  .project  CMakeLists.txt  Saper.cpp  config.conf
Saper/configs/: config.conf
Saper/configs/Graphic/menu/: config.conf
Saper/src/: MSBoardInput.cpp  MSBoardInput.h  MSSFMLView.cpp  MSSFMLView.h
Saper/src/MinesweeperBoard/: MinesweeperBoard.cpp  field.h
Saper/src/WindowStates/: Game.cpp  Game.h  MainMenu.cpp  MainMenu.h  WindowStates.h
Saper/src/WindowStates/FileIO/: FileManager.cpp  FileManager.h
Saper/src/WindowStates/FileIO/FileInformation/: InformationType.h
Saper/src/WindowStates/LoadSprite/: ClickEvent.cpp  ClickEvent.h  LoadSprite.cpp  LoadSprite.h  Object.cpp  Object.h  RenderClass.cpp  RenderClass.h  SpriteOptions.cpp  SpriteOptions.h  StateOfClass.h  TextureLoad.cpp  TextureLoad.h  objectState.h
Saper/src/WindowStates/LoadSprite/texturebackend/: Cache.cpp  Cache.h  SpriteOptions.cpp  SpriteOptions.h  StateOfClass.h  TextureLoad.cpp  TextureLoad.h
Saper/src/WindowStates/MainMenu/: Background.cpp  Background.h  Exit.cpp  Exit.h  NewGame.cpp  NewGame.h  Options.cpp  Options.h
Scripts/: CreateObjects.py  GroupSpriteCreator.py  Render.cpp  Render.h  TestMyfunction.py  config.conf  configMaker.py
Scripts/Graphic/Menu/: config.conf
configs/: config.conf
configs/Graphchicks/Game/: config.conf
configs/Graphchicks/Menu/: config.conf
configs/Graphic/menu/: config.conf
configs/NewGraphic/Game/: config.conf
configs/NewGraphic/Menu/: config.conf
configs/NewGraphic/menu/: config.conf
src/: EventHandler.cpp  EventHandler.h  MSSFMLView.cpp  MSSFMLView.h  Render.cpp  Render.h
src/MinesweeperBoard/: BoardControler.cpp  BoardControler.h  MSBoardInput.cpp  MSBoardInput.h  MSBoardTextView.cpp  MSBoardTextView.h  MSTextController.cpp  MSTextController.h  MinesweeperBoard.cpp  MinesweeperBoard.h  field.h
src/WindowStates/: Game.cpp  Game.h  InGameMenu.cpp  InGameMenu.h  LoadingScreen.cpp  LoadingScreen.h  MainMenu.cpp  MainMenu.h  State.cpp  State.h  WindowStates.h
src/WindowStates/FileIO/: FileManager.cpp
src/WindowStates/FileIO/FileInformation/: FileInformation.cpp  FileInformation.h  InformationType.h
src/WindowStates/FileIO/FileInformation/EnumStringConversion/: EnumStringConversion.h
src/WindowStates/Game/: Background.cpp  Background.h  BoardBG.cpp  BoardBG.h  Counter.cpp  Counter.h  Tile.cpp  Tile.h
src/WindowStates/Game/Counter/: Number.cpp  Number.h
src/WindowStates/LoadSprite/: ClickEvent.cpp  ClickEvent.h  Object.cpp  Object.h  ObjectInterface.cpp  ObjectInterface.h  ObjectUpdate.cpp  ObjectUpdate.h  RenderClass.cpp  RenderClass.h
src/WindowStates/LoadSprite/texturebackend/: Cache.cpp  Cache.h  SpriteOptions.cpp  SpriteOptions.h
src/WindowStates/MainMenu/: Background.cpp  Background.h  Buttons.cpp  Buttons.h  Exit.cpp  Exit.h  NewGame.cpp  NewGame.h  Options.cpp  Options.h  Settings.cpp  Settings.h
src/WindowStates/MainMenu/settingsbuttons/: Easy.cpp  Easy.h  Hard.cpp  Hard.h  Normal.cpp  Normal.h
src/sfml/: sfmlimplementation.cpp  sfmlimplementation.h
